--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>Header Content</header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running Locations, Distances and Times
+    </section>
+    <footer>Social media links</footer>
 </body>
 </html>
