--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,20 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
+
 <body>
-    <header>Header Content</header>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#"></a>Gallery</li>
+                <li><a href="#"></a>Sign up</li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Main Image
     </section>
@@ -23,4 +36,5 @@
     </section>
     <footer>Social media links</footer>
 </body>
+
 </html>
