Add google fonts and remove default margin, padding and border

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#"></a>Gallery</li>
-                <li><a href="#"></a>Sign up</li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Sign up</a></li>
             </ul>
         </nav>
     </header>
