--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         <h3>Dublin Docklands and Pheonix Park</h3>
     </div>
     </section>
-    <section>
-        Club Ethos
+    <section id="club-ethos">
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
     </section>
     <section>
         Running Locations, Distances and Times
