--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div>
     </section>
     <section id="club-ethos">
+        <h2 id="welcome">Why Love Running With Us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Healthy</h2>
@@ -66,7 +67,13 @@
             </div>
     </div>
         
-        <div id="center-about">Center</div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg">
+
+                </div>
+            </div>
+        </div>
     </section>
     <section>
         Running Locations, Distances and Times
