Add social media icons to footer

--- a/index.html
+++ b/index.html
@@ -112,7 +112,21 @@
         <h3>11:30</h3>
     </div>
     </section>
-    <footer>Social media links</footer>
+    <footer>
+        <ul id="">
+            <li><a href="https://Facebook.com" target="_blank" rel="noopener" aria-lable="Visit our Facebook page(open in new tab)">
+                <i class="fab fa-facebook"></i></a></li>
+
+            <li><a href="https:Twitter.com" target="_blank" rel="noopener" aria-lable="Visit our Twitter page(open in new tab)">
+                    <i class="fab fa-twitter-square"></i></a></li>
+
+            <li><a href="https://Youtube.com" target="_blank" rel="noopener" aria-lable="Visit our Youtube page(open in new tab)">
+                        <i class="fab fa-youtube-square"></i></a></li>
+
+            <li><a href="https://Instagram.com" target="_blank" rel="noopener" aria-lable="Visit our Instagram page(open in new tab)">
+                            <i class="fab fa-instagram"></i></a></li>
+        </ul>
+    </footer>
 
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/d15acb58b5.js" crossorigin="anonymous"></script>
