Add style to social media icons

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
     </section>
     <footer>
-        <ul id="">
+        <ul class="social-networks">
             <li><a href="https://Facebook.com" target="_blank" rel="noopener" aria-lable="Visit our Facebook page(open in new tab)">
                 <i class="fab fa-facebook"></i></a></li>
 
