--- a/gallery.html
+++ b/gallery.html
@@ -26,6 +26,20 @@
             </ul>
         </nav>
     </header>
+
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two athlestes running together">
+        <img src="assets/images/girls.jpg" alt="Three girls at charity paint running festival">
+        <img src="assets/images/runner3.jpg" alt="Sole male runner jogging on a baech">
+        <img src="assets/images/man.jpg" alt="Man at charity paint running">
+        <img src="assets/images/runner1.jpg" alt="Solo female runner jogging at Pheonix Park">
+        <img src="assets/images/runner2.jpg" alt="Runners competing in marathon">
+        <img src="assets/images/runner4.jpg" alt="Solo female runner jogging on a beach">
+        <img src="assets/images/running_gang.jpg" alt="Large group of runner taking part in a marathon on a rainy day">
+        <img src="assets/images/mud-run.jpg" alt="Two women runner taking a muddy selfie after the Mud Runners championship">
+
+    </section>
+    
  
     <footer>
         <ul class="social-networks">
